--- a/src/Jevstafjev.Anecdotes.SubscriberApi/Jevstafjev.Anecdotes.SubscriberApi.Web/appsettings.json
+++ b/src/Jevstafjev.Anecdotes.SubscriberApi/Jevstafjev.Anecdotes.SubscriberApi.Web/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "Cors": {
+    "Origins": "*"
+  },
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=SubscriberApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AuthServer": {
+    "Url": "https://localhost:10001"
   },
   "AllowedHosts": "*"
 }
