--- a/src/Jevstafjev.Anecdotes.SubscriberApi/Jevstafjev.Anecdotes.SubscriberApi.Web/Jevstafjev.Anecdotes.SubscriberApi.Web.csproj
+++ b/src/Jevstafjev.Anecdotes.SubscriberApi/Jevstafjev.Anecdotes.SubscriberApi.Web/Jevstafjev.Anecdotes.SubscriberApi.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Jevstafjev.Anecdotes.SubscriberApi.Infrastructure\Jevstafjev.Anecdotes.SubscriberApi.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
